# MacroMind

./: .env.example  .gitignore  LICENSE  README.md  explain.py  notes.txt  pyproject.toml  requirements.txt  train.py
agent/: __init__.py  ppo_agent.py
data/: build_food_library.py  food_library.py
data/foods/: pantry.json
environment/: __init__.py  day_env.py
rag/: __init__.py  embedder.py  explainer.py
rag/knowledge_base/: food_profiles.txt  macro_timing.txt  meal_spacing.txt
rag/vector_store/: index.faiss  index.pkl
tests/: __init__.py  test_env.py
viz/: __init__.py
