[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macromind"
version = "0.1.0"
description = "A macro tracking environment"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "gymnasium",
    "numpy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*", "environment*", "rag*", "viz*"]